kubernetes/manifests/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31000
